fix: coverflow and sing player progress bar colors

--- a/themes/ctp-latte/catppuccin-latte.scss
+++ b/themes/ctp-latte/catppuccin-latte.scss
@@ -715,8 +715,8 @@ body.body--light {
   }
 
   /* Coverflow Mode */
-  [sfc-name='ImmersiveCoveflowPlayer'] {
-    [sfc-name='MojavePlayer'] {
+  .coverflow-player {
+    [sfc-name='MojavePlayer'], .minimal-player {
       .overlay-progress-track {
         background: var(--surface0);
       }
