--- a/themes/ctp-mocha/catppuccin-mocha.scss
+++ b/themes/ctp-mocha/catppuccin-mocha.scss
@@ -715,8 +715,8 @@ body.body--dark {
   }
 
   /* Coverflow Mode */
-  [sfc-name='ImmersiveCoveflowPlayer'] {
-    [sfc-name='MojavePlayer'] {
+  .coverflow-player {
+    [sfc-name='MojavePlayer'], .minimal-player {
       .overlay-progress-track {
         background: var(--surface0);
       }
